Mudança total no site.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SupportTI  | Suporte de informática em Santo Antônio de Jesus - BA</title>
+  <title>SupportTI</title>
+
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
-  <style>
 
   <style>
     * {
@@ -14,34 +14,111 @@
       padding: 0;
       box-sizing: border-box;
     }
+
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
       font-family: 'Roboto', sans-serif;
       background-color: #f8fafc;
       color: #333;
     }
+
+    /* MENU */
+    .navbar {
+      background: #0077b6;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .nav-container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 10px 15px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+    }
+
+    .navbar ul {
+      list-style: none;
+      display: flex;
+      gap: 25px;
+    }
+
+    .navbar a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 0.95em;
+    }
+
+    .menu-toggle {
+      display: none;
+      font-size: 26px;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      .navbar ul {
+        position: absolute;
+        top: 50px;
+        right: 0;
+        width: 100%;
+        background: #0077b6;
+        flex-direction: column;
+        display: none;
+        padding: 15px 0;
+      }
+
+      .navbar ul.show {
+        display: flex;
+      }
+
+      .navbar ul li {
+        text-align: center;
+        padding: 10px 0;
+      }
+    }
+
+    /* HEADER */
     header {
       text-align: center;
       background: linear-gradient(90deg, #0077b6, #00b4d8);
-      color: white;
-      padding: 5px 5px;
+      padding: 15px 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
+
     .container {
       max-width: 1200px;
       margin: 30px auto;
       padding: 20px;
     }
-    .services h2, .contact h2, .map h2, .reviews-title {
+
+    .services h2,
+    .contact h2,
+    .map h2,
+    .reviews-title {
       text-align: center;
       margin-bottom: 25px;
       color: #0077b6;
       font-size: 2em;
     }
+
+    /* SERVIÇOS */
     .service-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
       gap: 25px;
     }
+
     .service-item {
       background: #fff;
       border-radius: 12px;
@@ -50,27 +127,33 @@
       transition: all 0.3s ease;
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
     }
+
     .service-item:hover {
       transform: translateY(-8px);
       box-shadow: 0 6px 18px rgba(0,0,0,0.15);
     }
+
     .service-item img {
       width: 70px;
       margin-bottom: 15px;
     }
+
     .service-item h3 {
       font-size: 1.3em;
       color: #0077b6;
       margin-bottom: 10px;
     }
+
     .service-item p {
       color: #555;
       font-size: 0.95em;
     }
+
     .contact {
       margin-top: 40px;
       text-align: center;
     }
+
     .social-links {
       margin-top: 20px;
       display: flex;
@@ -78,6 +161,7 @@
       justify-content: center;
       gap: 15px;
     }
+
     .social-links a {
       text-decoration: none;
       padding: 12px 24px;
@@ -86,15 +170,18 @@
       font-weight: 500;
       transition: 0.3s;
     }
-    .social-links a:hover {
-      opacity: 0.9;
-      transform: scale(1.05);
-    }
+
     .whatsapp { background-color: #25D366; }
     .instagram { background-color: #E4405F; }
-    .google-review { background-color: #4285F4; padding: 14px 40px; } /* mais espaçamento */
+    .google-review { background-color: #4285F4; padding: 14px 40px; }
     .phone { background-color: #34b7f1; }
     .consulta-os { background-color: #FF5722; }
+
+    /* ESPAÇO EXTRA PARA O MAPA */
+    .map {
+      margin-top: 70px;
+    }
+
     .map iframe {
       width: 100%;
       height: 350px;
@@ -102,6 +189,7 @@
       border-radius: 12px;
       margin-top: 15px;
     }
+
     footer {
       text-align: center;
       padding: 20px;
@@ -110,112 +198,110 @@
       color: white;
       font-size: 0.9em;
     }
-    @media (max-width: 768px) {
-      .social-links {
-        flex-direction: column;
-      }
-      .google-review { padding: 14px 24px; } /* ajuste mobile */
-    }
   </style>
 </head>
+
 <body>
 
-  <header>
-    <h1 align="center"><img src="images/pic00.png" alt="SupportTI - Suporte Técnico em Santo Antônio de Jesus" width="45%"></h1>
-  </header>
-
-  <div class="container">
-    <!-- Logo -->
-    <!-- Serviços -->
-    <section class="services">
-      <h2>Nossos Serviços</h2>
-      <div class="service-grid">
-        <div class="service-item">
-          <img src="images/technical-support.png" alt="Atendimento">
-          <h3>Atendimento ao Cliente</h3>
-          <p>Serviço avulso ou contratual com resolução rápida e eficaz de problemas.</p>
-        </div>
-        <div class="service-item">
-          <img src="images/customer-support.png" alt="Atendimento Técnico">
-          <h3>Suporte Técnico</h3>
-          <p>Manutenção imediata ou com agendamento, conforme sua necessidade.</p>
-        </div>
-        <div class="service-item">
-          <img src="images/network.png" alt="Manutenção de Redes">
-          <h3>Manutenção de Redes</h3>
-          <p>Planejamento de redes de computadores, garantindo performance e segurança.</p>
-        </div>
-        <div class="service-item">
-          <img src="images/maintenance.png" alt="Equipamentos">
-          <h3>Manutenção de Equipamentos</h3>
-          <p>Reparos especializados para notebook, computador e servidor.</p>
-        </div>
-        <div class="service-item">
-          <img src="images/server.png" alt="Servidores">
-          <h3>Gerenciamento de Servidores</h3>
-          <p>Gestão eficiente de servidores, com foco em performance e segurança do cliente.</p>
-        </div>
-        <div class="service-item">
-          <img src="images/wifi.png" alt="Wireless">
-          <h3>Soluções em Redes Wireless</h3>
-          <p>Configuração e otimização de redes sem fio residenciais e empresariais.</p>
-        </div>
-        <div class="service-item">
-          <img src="images/certificado-digital.png" alt="Certificado Digital">
-          <h3>Certificado Digital A1 e A3</h3>
-          <p>Emissão para pessoa física e jurídica, com segurança e agilidade.</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contato -->
-    <section class="contact">
-      <h2>Entre em Contato</h2>
-      <div class="social-links">
-        <a class="whatsapp" href="https://wa.me/557536323105" target="_blank">WhatsApp</a>
-        <a class="instagram" href="https://www.instagram.com/supporttionline/" target="_blank">Instagram</a>
-        <a class="google-review" href="https://g.page/r/CWQYaiWpal-7EBM/review" target="_blank">Avalie no Google</a>
-        <a class="phone" href="tel:+557536323105">Ligue Agora</a>
-        <a class="consulta-os" href="https://shoficina.com.br/osweb/home" target="_blank">Consultar OS</a>
-      </div>
-    </section>
-
-    <!-- Mapa -->
-    <section class="map">
-	
-      <h2>Nossa Localização</h2>
-	        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3700.734050640106!2d-39.263452425098166!3d-12.96872235975107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x73e2a40d721cdaf%3A0xbb5f6aa9256a1864!2sSUPPORTTI%20Tecnologia%20e%20Informa%C3%A7%C3%A3o!5e1!3m2!1spt-BR!2sbr!4v1729778967055!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
-    </section>
+<nav class="navbar">
+  <div class="nav-container">
+    <span class="menu-toggle" onclick="toggleMenu()">☰</span>
+    <ul id="menu">
+      <li><a href="#servicos">Nossos Serviços</a></li>
+      <li><a href="#contato">Entre em Contato</a></li>
+      <li><a href="#localizacao">Nossa Localização</a></li>
+      <li><a href="#avaliacoes">Avaliações</a></li>
+    </ul>
   </div>
+</nav>
 
-  <!-- Avaliações -->
-  <h2 class="reviews-title">Avaliações dos Clientes</h2>
-  <script src="https://static.elfsight.com/platform/platform.js" async></script>
-  <div class="elfsight-app-c38e3242-6a40-428f-a83f-5df35c73fc01" data-elfsight-app-lazy></div>
+<header>
+  <img src="images/pic00.png" alt="logo" width="30%">
+</header>
 
-  <footer>
-    <p>© 2026 SupportTI Tecnologia e Informação – Todos os direitos reservados</p>
-    <p>Seu IP: <span id="ip-address">Carregando...</span></p>
-  </footer>
+<div class="container">
 
-  <script>
-    fetch('https://httpbin.org/ip')
-      .then(response => response.json())
-      .then(data => {
-        document.getElementById('ip-address').textContent = data.origin;
-      })
-      .catch(error => {
-        document.getElementById('ip-address').textContent = "Erro ao obter IP";
-      });
-  </script>
+<section class="services" id="servicos">
+  <h2>Nossos Serviços</h2>
+
+  <div class="service-grid">
+
+    <div class="service-item">
+      <img src="images/technical-support.png">
+      <h3>Atendimento ao Cliente</h3>
+      <p>Serviço avulso ou contratual com resolução rápida e eficaz de problemas.</p>
+    </div>
+
+    <div class="service-item">
+      <img src="images/customer-support.png">
+      <h3>Suporte Técnico</h3>
+      <p>Manutenção imediata ou com agendamento, conforme sua necessidade.</p>
+    </div>
+
+    <div class="service-item">
+      <img src="images/network.png">
+      <h3>Manutenção de Redes</h3>
+      <p>Planejamento de redes de computadores, garantindo performance e segurança.</p>
+    </div>
+
+    <div class="service-item">
+      <img src="images/maintenance.png">
+      <h3>Manutenção de Equipamentos</h3>
+      <p>Reparos especializados para notebook, computador e servidor.</p>
+    </div>
+
+    <div class="service-item">
+      <img src="images/server.png">
+      <h3>Gerenciamento de Servidores</h3>
+      <p>Gestão eficiente de servidores, com foco em performance e segurança do cliente.</p>
+    </div>
+
+    <div class="service-item">
+      <img src="images/wifi.png">
+      <h3>Soluções em Redes Wireless</h3>
+      <p>Configuração e otimização de redes sem fio residenciais e empresariais.</p>
+    </div>
+
+    <div class="service-item">
+      <img src="images/certificado-digital.png">
+      <h3>Certificado Digital A1 e A3</h3>
+      <p>Emissão para pessoa física e jurídica, com segurança e agilidade.</p>
+    </div>
+
+  </div>
+</section>
+
+<section class="contact" id="contato">
+  <h2>Entre em Contato</h2>
+  <div class="social-links">
+    <a class="whatsapp" href="https://wa.me/557536323105">WhatsApp</a>
+    <a class="instagram" href="https://www.instagram.com/supporttionline/">Instagram</a>
+    <a class="google-review" href="https://g.page/r/CWQYaiWpal-7EBM/review">Avalie no Google</a>
+    <a class="phone" href="tel:+557536323105">Ligue Agora</a>
+    <a class="consulta-os" href="https://shoficina.com.br/osweb/home">Consultar OS</a>
+  </div>
+</section>
+
+<section class="map" id="localizacao">
+  <h2>Nossa Localização</h2>
+  <iframe src="https://www.google.com/maps?q=SUPPORTTI%20Tecnologia%20e%20Informação&output=embed" loading="lazy"></iframe>
+</section>
+
+</div>
+
+<h2 class="reviews-title" id="avaliacoes">Avaliações dos Clientes</h2>
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-c38e3242-6a40-428f-a83f-5df35c73fc01"></div>
+
+<footer>
+  <p>© 2026 SupportTI Tecnologia e Informação – Todos os direitos reservados</p>
+</footer>
+
+<script>
+  function toggleMenu() {
+    document.getElementById("menu").classList.toggle("show");
+  }
+</script>
+
 </body>
 </html>
-
-
-
-
-
-
-
-
-
