--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SupportTI</title>
+  <title>SupportTI  | Suporte de informática em Santo Antônio de Jesus - BA</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 
@@ -186,7 +186,7 @@
 
     /* ESPAÇAMENTO EXTRA PARA LOCALIZAÇÃO */
     .map {
-      margin-top: 80px;
+      margin-top: 40px;
     }
 
     .map iframe {
@@ -328,3 +328,4 @@
 
 </body>
 </html>
+
