--- a/consulta-os/index.html
+++ b/consulta-os/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Consulta de Ordem de Serviço | SupportTI</title>
+  <title>SupportTI | Ordem de Serviço </title>
 
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
@@ -114,3 +114,4 @@
 
 </body>
 </html>
+
