--- a/index.html
+++ b/index.html
@@ -293,14 +293,10 @@
       </div>
     </section>
 
-    <!-- MAPA (FUNCIONANDO) -->
-    <section class="map" id="localizacao">
-      <h2>Nossa Localização</h2>
-      <iframe
-        src="https://www.google.com/maps?q=SupportTI%20Tecnologia%20e%20Informação&output=embed"
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+   <!-- Mapa -->
+    <section class="map">
+	    <h2>Nossa Localização</h2>
+	    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3700.734050640106!2d-39.263452425098166!3d-12.96872235975107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x73e2a40d721cdaf%3A0xbb5f6aa9256a1864!2sSUPPORTTI%20Tecnologia%20e%20Informa%C3%A7%C3%A3o!5e1!3m2!1spt-BR!2sbr!4v1729778967055!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
   </div>
@@ -328,5 +324,6 @@
 
 </body>
 </html>
+
 
 
