--- a/index.html
+++ b/index.html
@@ -392,36 +392,36 @@
 
   <div class="clients-carousel">
 
-    <!--<div class="client-item"><img src="images/clientes/audiconjur.png"></div>-->
-    <div class="client-item"><img src="images/clientes/cardoso-vita.png"></div>
-    <div class="client-item"><img src="images/clientes/churrascaria-pena-branca.png"></div>
-    <div class="client-item"><img src="images/clientes/crie-borde.png"></div>
-    <div class="client-item"><img src="images/clientes/hotel-pena-branca.png"></div>
-    <div class="client-item"><img src="images/clientes/clinica-idefi.png"></div>
-    <div class="client-item"><img src="images/clientes/fabio-braga.png"></div>
-    <div class="client-item"><img src="images/clientes/facemp.png"></div>
-    <!--<div class="client-item"><img src="images/clientes/fbgames.png"></div> -->
-    <div class="client-item"><img src="images/clientes/fbnet.png"></div>
-    <div class="client-item"><img src="images/clientes/frigosaj.png"></div>
-    <div class="client-item"><img src="images/clientes/mr-contabilidade.png"></div>
-    <div class="client-item"><img src="images/clientes/prime-promotora.png"></div>
-    <div class="client-item"><img src="images/clientes/rogerio-auto-center.png"></div>
+    <!--<div class="client-item"><img src="images/audiconjur.png"></div>-->
+    <div class="client-item"><img src="images/cardoso-vita.png"></div>
+    <div class="client-item"><img src="images/churrascaria-pena-branca.png"></div>
+    <div class="client-item"><img src="images/crie-borde.png"></div>
+    <div class="client-item"><img src="images/hotel-pena-branca.png"></div>
+    <div class="client-item"><img src="images/clinica-idefi.png"></div>
+    <div class="client-item"><img src="images/fabio-braga.png"></div>
+    <div class="client-item"><img src="images/facemp.png"></div>
+    <!--<div class="client-item"><img src="images/fbgames.png"></div> -->
+    <div class="client-item"><img src="images/fbnet.png"></div>
+    <div class="client-item"><img src="images/frigosaj.png"></div>
+    <!--<div class="client-item"><img src="images/mr-contabilidade.png"></div> -->
+    <div class="client-item"><img src="images/prime-promotora.png"></div>
+    <div class="client-item"><img src="images/rogerio-auto-center.png"></div>
 
     <!-- DUPLICADO para loop infinito -->
-    <div class="client-item"><img src="images/clientes/audiconjur.png"></div>
-    <div class="client-item"><img src="images/clientes/cardoso-vita.png"></div>
-    <div class="client-item"><img src="images/clientes/churrascaria-pena-branca.png"></div>
-    <div class="client-item"><img src="images/clientes/crie-borde.png"></div>
-    <div class="client-item"><img src="images/clientes/hotel-pena-branca.png"></div>
-    <div class="client-item"><img src="images/clientes/clinica-idefi.png"></div>
-    <div class="client-item"><img src="images/clientes/fabio-braga.png"></div>
-    <div class="client-item"><img src="images/clientes/facemp.png"></div>
-    <div class="client-item"><img src="images/clientes/fbgames.png"></div>
-    <div class="client-item"><img src="images/clientes/fbnet.png"></div>
-    <div class="client-item"><img src="images/clientes/frigosaj.png"></div>
-    <div class="client-item"><img src="images/clientes/mr-contabilidade.png"></div>
-    <div class="client-item"><img src="images/clientes/prime-promotora.png"></div>
-    <div class="client-item"><img src="images/clientes/rogerio-auto-center.png"></div>
+    <div class="client-item"><img src="images/audiconjur.png"></div>
+    <div class="client-item"><img src="images/cardoso-vita.png"></div>
+    <div class="client-item"><img src="images/churrascaria-pena-branca.png"></div>
+    <div class="client-item"><img src="images/crie-borde.png"></div>
+    <div class="client-item"><img src="images/hotel-pena-branca.png"></div>
+    <div class="client-item"><img src="images/clinica-idefi.png"></div>
+    <div class="client-item"><img src="images/fabio-braga.png"></div>
+    <div class="client-item"><img src="images/facemp.png"></div>
+    <div class="client-item"><img src="images/fbgames.png"></div>
+    <div class="client-item"><img src="images/fbnet.png"></div>
+    <div class="client-item"><img src="images/frigosaj.png"></div>
+    <div class="client-item"><img src="images/mr-contabilidade.png"></div>
+    <div class="client-item"><img src="images/prime-promotora.png"></div>
+    <div class="client-item"><img src="images/rogerio-auto-center.png"></div>
 
   </div>
 </section>
@@ -443,3 +443,4 @@
 
 </body>
 </html>
+
