--- a/index.html
+++ b/index.html
@@ -393,35 +393,35 @@
   <div class="clients-carousel">
 
     <!--<div class="client-item"><img src="images/audiconjur.png"></div>-->
-    <div class="client-item"><img src="images/cardoso-vita.png"></div>
-    <div class="client-item"><img src="images/churrascaria-pena-branca.png"></div>
-    <div class="client-item"><img src="images/crie-borde.png"></div>
-    <div class="client-item"><img src="images/hotel-pena-branca.png"></div>
-    <div class="client-item"><img src="images/clinica-idefi.png"></div>
-    <div class="client-item"><img src="images/fabio-braga.png"></div>
-    <div class="client-item"><img src="images/facemp.png"></div>
+    <div class="client-item"><img src="clientes/cardoso-vita.png"></div>
+    <div class="client-item"><img src="clientes/churrascaria-pena-branca.png"></div>
+    <div class="client-item"><img src="clientes/crie-borde.png"></div>
+    <div class="client-item"><img src="clientes/hotel-pena-branca.png"></div>
+    <div class="client-item"><img src="clientes/clinica-idefi.png"></div>
+    <div class="client-item"><img src="clientes/fabio-braga.png"></div>
+    <div class="client-item"><img src="clientes/facemp.png"></div>
     <!--<div class="client-item"><img src="images/fbgames.png"></div> -->
-    <div class="client-item"><img src="images/fbnet.png"></div>
-    <div class="client-item"><img src="images/frigosaj.png"></div>
+    <div class="client-item"><img src="clientes/fbnet.png"></div>
+    <div class="client-item"><img src="clientes/frigosaj.png"></div>
     <!--<div class="client-item"><img src="images/mr-contabilidade.png"></div> -->
-    <div class="client-item"><img src="images/prime-promotora.png"></div>
-    <div class="client-item"><img src="images/rogerio-auto-center.png"></div>
+    <div class="client-item"><img src="clientes/prime-promotora.png"></div>
+    <div class="client-item"><img src="clientes/rogerio-auto-center.png"></div>
 
     <!-- DUPLICADO para loop infinito -->
-    <div class="client-item"><img src="images/audiconjur.png"></div>
-    <div class="client-item"><img src="images/cardoso-vita.png"></div>
-    <div class="client-item"><img src="images/churrascaria-pena-branca.png"></div>
-    <div class="client-item"><img src="images/crie-borde.png"></div>
-    <div class="client-item"><img src="images/hotel-pena-branca.png"></div>
-    <div class="client-item"><img src="images/clinica-idefi.png"></div>
-    <div class="client-item"><img src="images/fabio-braga.png"></div>
-    <div class="client-item"><img src="images/facemp.png"></div>
-    <div class="client-item"><img src="images/fbgames.png"></div>
-    <div class="client-item"><img src="images/fbnet.png"></div>
-    <div class="client-item"><img src="images/frigosaj.png"></div>
-    <div class="client-item"><img src="images/mr-contabilidade.png"></div>
-    <div class="client-item"><img src="images/prime-promotora.png"></div>
-    <div class="client-item"><img src="images/rogerio-auto-center.png"></div>
+    <div class="client-item"><img src="clientes/audiconjur.png"></div>
+    <div class="client-item"><img src="clientes/cardoso-vita.png"></div>
+    <div class="client-item"><img src="clientes/churrascaria-pena-branca.png"></div>
+    <div class="client-item"><img src="clientes/crie-borde.png"></div>
+    <div class="client-item"><img src="clientes/hotel-pena-branca.png"></div>
+    <div class="client-item"><img src="clientes/clinica-idefi.png"></div>
+    <div class="client-item"><img src="clientes/fabio-braga.png"></div>
+    <div class="client-item"><img src="clientes/facemp.png"></div>
+    <div class="client-item"><img src="clientes/fbgames.png"></div>
+    <div class="client-item"><img src="clientes/fbnet.png"></div>
+    <div class="client-item"><img src="clientes/frigosaj.png"></div>
+    <div class="client-item"><img src="clientes/mr-contabilidade.png"></div>
+    <div class="client-item"><img src="clientes/prime-promotora.png"></div>
+    <div class="client-item"><img src="clientes/rogerio-auto-center.png"></div>
 
   </div>
 </section>
@@ -443,4 +443,5 @@
 
 </body>
 </html>
+
 
