--- a/index.html
+++ b/index.html
@@ -387,31 +387,28 @@
   <div class="elfsight-app-c38e3242-6a40-428f-a83f-5df35c73fc01"></div>
 
 <!-- CLIENTES E PARCEIROS -->
-<!-- 
 <section class="clients" id="clientes">
-  <h2 class="reviews-title">Algumas empresas que confiam em nosso trabalho</h2>
+  <h2 class="reviews-title">Parceiros Autorizados</h2>
 
   <div class="clients-carousel">
 
     <!--<div class="client-item"><img src="images/audiconjur.png"></div>-->
-    <div class="client-item"><img src="clientes/cardoso-vita.png"></div>
-    <div class="client-item"><img src="clientes/churrascaria-pena-branca.png"></div>
-    <div class="client-item"><img src="clientes/crie-borde.png"></div>
-    <div class="client-item"><img src="clientes/hotel-pena-branca.png"></div>
-    <div class="client-item"><img src="clientes/clinica-idefi.png"></div>
-    <div class="client-item"><img src="clientes/fabio-braga.png"></div>
-    <div class="client-item"><img src="clientes/facemp.png"></div>
+    <!--<div class="client-item"><img src="clientes/cardoso-vita.png"></div> -->
+    <!--<div class="client-item"><img src="clientes/churrascaria-pena-branca.png"></div> -->
+    <!--<div class="client-item"><img src="clientes/crie-borde.png"></div> -->
+    <!--<div class="client-item"><img src="clientes/hotel-pena-branca.png"></div> -->
+    <!--<div class="client-item"><img src="clientes/clinica-idefi.png"></div> -->
+    <!--<div class="client-item"><img src="clientes/fabio-braga.png"></div> -->
+    <!--<div class="client-item"><img src="clientes/facemp.png"></div> -->
     <!--<div class="client-item"><img src="images/fbgames.png"></div> -->
-    <div class="client-item"><img src="clientes/fbnet.png"></div>
-    <div class="client-item"><img src="clientes/frigosaj.png"></div>
+    <!--<div class="client-item"><img src="clientes/fbnet.png"></div> -->
+    <!--<div class="client-item"><img src="clientes/frigosaj.png"></div> -->
     <!--<div class="client-item"><img src="images/mr-contabilidade.png"></div> -->
-    <div class="client-item"><img src="clientes/prime-promotora.png"></div>
-    <div class="client-item"><img src="clientes/rogerio-auto-center.png"></div>
-	-->
-
+    <!--<div class="client-item"><img src="clientes/prime-promotora.png"></div> -->
+    <!--<div class="client-item"><img src="clientes/rogerio-auto-center.png"></div> -->
+	
     <!-- DUPLICADO para loop infinito -->
-	<!--
-    <div class="client-item"><img src="clientes/audiconjur.png"></div>
+	<div class="client-item"><img src="clientes/audiconjur.png"></div>
     <div class="client-item"><img src="clientes/cardoso-vita.png"></div>
     <div class="client-item"><img src="clientes/churrascaria-pena-branca.png"></div>
     <div class="client-item"><img src="clientes/crie-borde.png"></div>
@@ -425,8 +422,7 @@
     <div class="client-item"><img src="clientes/mr-contabilidade.png"></div>
     <div class="client-item"><img src="clientes/prime-promotora.png"></div>
     <div class="client-item"><img src="clientes/rogerio-auto-center.png"></div>
-	 -->
-
+	
   </div>
 </section>
   <footer>
@@ -447,6 +443,7 @@
 
 </body>
 </html>
+
 
 
 
