--- a/index.html
+++ b/index.html
@@ -392,36 +392,36 @@
 
   <div class="clients-carousel">
 
-    <!--<div class="client-item"><img src="images/audiconjur.png"></div>-->
-    <!--<div class="client-item"><img src="clientes/cardoso-vita.png"></div> -->
-    <!--<div class="client-item"><img src="clientes/churrascaria-pena-branca.png"></div> -->
-    <!--<div class="client-item"><img src="clientes/crie-borde.png"></div> -->
-    <!--<div class="client-item"><img src="clientes/hotel-pena-branca.png"></div> -->
-    <!--<div class="client-item"><img src="clientes/clinica-idefi.png"></div> -->
-    <!--<div class="client-item"><img src="clientes/fabio-braga.png"></div> -->
-    <!--<div class="client-item"><img src="clientes/facemp.png"></div> -->
-    <!--<div class="client-item"><img src="images/fbgames.png"></div> -->
-    <!--<div class="client-item"><img src="clientes/fbnet.png"></div> -->
-    <!--<div class="client-item"><img src="clientes/frigosaj.png"></div> -->
-    <!--<div class="client-item"><img src="images/mr-contabilidade.png"></div> -->
-    <!--<div class="client-item"><img src="clientes/prime-promotora.png"></div> -->
-    <!--<div class="client-item"><img src="clientes/rogerio-auto-center.png"></div> -->
+    <!-- <div class="client-item"><img src="images/audiconjur.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/cardoso-vita.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/churrascaria-pena-branca.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/crie-borde.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/hotel-pena-branca.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/clinica-idefi.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/fabio-braga.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/facemp.png"></div> -->
+    <!-- <div class="client-item"><img src="images/fbgames.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/fbnet.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/frigosaj.png"></div> -->
+    <!-- <div class="client-item"><img src="images/mr-contabilidade.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/prime-promotora.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/rogerio-auto-center.png"></div> -->
 	
     <!-- DUPLICADO para loop infinito -->
-	<div class="client-item"><img src="clientes/audiconjur.png"></div>
-    <div class="client-item"><img src="clientes/cardoso-vita.png"></div>
-    <div class="client-item"><img src="clientes/churrascaria-pena-branca.png"></div>
-    <div class="client-item"><img src="clientes/crie-borde.png"></div>
-    <div class="client-item"><img src="clientes/hotel-pena-branca.png"></div>
-    <div class="client-item"><img src="clientes/clinica-idefi.png"></div>
-    <div class="client-item"><img src="clientes/fabio-braga.png"></div>
-    <div class="client-item"><img src="clientes/facemp.png"></div>
-    <div class="client-item"><img src="clientes/fbgames.png"></div>
-    <div class="client-item"><img src="clientes/fbnet.png"></div>
-    <div class="client-item"><img src="clientes/frigosaj.png"></div>
-    <div class="client-item"><img src="clientes/mr-contabilidade.png"></div>
-    <div class="client-item"><img src="clientes/prime-promotora.png"></div>
-    <div class="client-item"><img src="clientes/rogerio-auto-center.png"></div>
+	<!-- <div class="client-item"><img src="clientes/audiconjur.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/cardoso-vita.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/churrascaria-pena-branca.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/crie-borde.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/hotel-pena-branca.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/clinica-idefi.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/fabio-braga.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/facemp.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/fbgames.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/fbnet.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/frigosaj.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/mr-contabilidade.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/prime-promotora.png"></div> -->
+    <!-- <div class="client-item"><img src="clientes/rogerio-auto-center.png"></div> -->
 	
   </div>
 </section>
@@ -443,6 +443,7 @@
 
 </body>
 </html>
+
 
 
 
